--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -120,5 +120,8 @@
     "gallery_total_images_label": "Total images: {count}",
     "gallery_task_group_title": "{title} ({count} images)",
     "confirm_image_deletion_message": "Are you sure you want to permanently delete this image from your disk?\n\n{}",
-    "regenerate_image_title": "Regenerate Image"
+    "regenerate_image_title": "Regenerate Image",
+    "thumbnail_regen_button": "Regenerate",
+    "thumbnail_delete_button": "Delete",
+    "load_demo_button": "Load Demo"
 }
