--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -128,5 +128,6 @@
     "elevenlabs": "ElevenLabs",
     "balance_not_loaded": "Balance not loaded",
     "elevenlabs_template_label": "Voice template:",
-    "no_templates_found": "No templates found"
+    "no_templates_found": "No templates found",
+    "char_limit": "Character Limit:"
 }
