--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -135,5 +135,34 @@
     "tts_provider_label": "TTS Provider:",
     "voicemaker_voice_label": "VoiceMaker Voice:",
     "gemini_voice_label": "Gemini Voice:",
-    "gemini_tone_label": "Gemini Tone:"
+    "gemini_tone_label": "Gemini Tone:",
+    "render_settings": "Render Settings",
+    "codec_label": "Codec:",
+    "preset_label": "Preset:",
+    "bitrate_label": "Bitrate:",
+    "upscale_factor_label": "Upscale Factor:",
+    "transitions_settings": "Transitions",
+    "enable_transitions_label": "Enable Transitions",
+    "duration_label": "Duration:",
+    "zoom_effects": "Zoom Effects",
+    "enable_zoom_label": "Enable Zoom",
+    "zoom_speed_factor_label": "Zoom Speed Factor:",
+    "zoom_intensity_label": "Zoom Intensity:",
+    "sway_effects": "Sway Effects",
+    "enable_sway_label": "Enable Sway",
+    "sway_speed_factor_label": "Sway Speed Factor:",
+    "whisper_engine_group": "Whisper Engine",
+    "amd_gpu_fork_radio": "AMD (GPU/Fork)",
+    "standard_python_radio": "Standard (Python)",
+    "model_selection_group": "Model Selection",
+    "model_label": "Model:",
+    "subtitle_style_group": "Subtitle Style",
+    "font_label": "Font:",
+    "font_size_label": "Font Size:",
+    "color_label": "Color:",
+    "vertical_margin_label": "Vertical Margin:",
+    "animation_logic_group": "Animation & Logic",
+    "fade_in_label": "Fade In:",
+    "fade_out_label": "Fade Out:",
+    "max_words_per_line_label": "Max Words per Line:"
 }
