--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -135,5 +135,34 @@
     "tts_provider_label": "Сервис озвучки:",
     "voicemaker_voice_label": "Голос VoiceMaker:",
     "gemini_voice_label": "Голос Gemini:",
-    "gemini_tone_label": "Тон Gemini:"
+    "gemini_tone_label": "Тон Gemini:",
+    "render_settings": "Настройки рендеринга",
+    "codec_label": "Кодек:",
+    "preset_label": "Пресет:",
+    "bitrate_label": "Битрейт:",
+    "upscale_factor_label": "Фактор масштабирования:",
+    "transitions_settings": "Переходы",
+    "enable_transitions_label": "Включить переходы",
+    "duration_label": "Длительность:",
+    "zoom_effects": "Эффекты масштабирования",
+    "enable_zoom_label": "Включить масштабирование",
+    "zoom_speed_factor_label": "Фактор скорости масштабирования:",
+    "zoom_intensity_label": "Интенсивность масштабирования:",
+    "sway_effects": "Эффекты покачивания",
+    "enable_sway_label": "Включить покачивание",
+    "sway_speed_factor_label": "Фактор скорости покачивания:",
+    "whisper_engine_group": "Движок Whisper",
+    "amd_gpu_fork_radio": "AMD (GPU/Fork)",
+    "standard_python_radio": "Стандартный (Python)",
+    "model_selection_group": "Выбор модели",
+    "model_label": "Модель:",
+    "subtitle_style_group": "Стиль субтитров",
+    "font_label": "Шрифт:",
+    "font_size_label": "Размер шрифта:",
+    "color_label": "Цвет:",
+    "vertical_margin_label": "Вертикальный отступ:",
+    "animation_logic_group": "Анимация и логика",
+    "fade_in_label": "Появление:",
+    "fade_out_label": "Исчезновение:",
+    "max_words_per_line_label": "Макс. слов в строке:"
 }
