--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -135,5 +135,34 @@
     "tts_provider_label": "Сервіс озвучки:",
     "voicemaker_voice_label": "Голос VoiceMaker:",
     "gemini_voice_label": "Голос Gemini:",
-    "gemini_tone_label": "Тон Gemini:"
+    "gemini_tone_label": "Тон Gemini:",
+    "render_settings": "Налаштування рендерингу",
+    "codec_label": "Кодек:",
+    "preset_label": "Пресет:",
+    "bitrate_label": "Бітрейт:",
+    "upscale_factor_label": "Фактор масштабування:",
+    "transitions_settings": "Переходи",
+    "enable_transitions_label": "Увімкнути переходи",
+    "duration_label": "Тривалість:",
+    "zoom_effects": "Ефекти масштабування",
+    "enable_zoom_label": "Увімкнути масштабування",
+    "zoom_speed_factor_label": "Фактор швидкості масштабування:",
+    "zoom_intensity_label": "Інтенсивність масштабування:",
+    "sway_effects": "Ефекти похитування",
+    "enable_sway_label": "Увімкнути похитування",
+    "sway_speed_factor_label": "Фактор швидкості похитування:",
+    "whisper_engine_group": "Рушій Whisper",
+    "amd_gpu_fork_radio": "AMD (GPU/Fork)",
+    "standard_python_radio": "Стандартний (Python)",
+    "model_selection_group": "Вибір моделі",
+    "model_label": "Модель:",
+    "subtitle_style_group": "Стиль субтитрів",
+    "font_label": "Шрифт:",
+    "font_size_label": "Розмір шрифту:",
+    "color_label": "Колір:",
+    "vertical_margin_label": "Вертикальний відступ:",
+    "animation_logic_group": "Анімація та логіка",
+    "fade_in_label": "Плавне з'явлення:",
+    "fade_out_label": "Плавне зникнення:",
+    "max_words_per_line_label": "Макс. слів у рядку:"
 }
