--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -7,6 +7,7 @@
     "languages_tab": "Языки",
     "prompts_tab": "Промты",
     "montage_tab": "Монтаж",
+    "max_concurrent_montages_label": "Максимум одновременных монтажей:",
     "subtitles_tab": "Субтитры",
     "templates_tab": "Шаблоны",
     "openrouter_tab": "OpenRouter",
@@ -151,6 +152,7 @@
     "sway_effects": "Эффекты покачивания",
     "enable_sway_label": "Включить покачивание",
     "sway_speed_factor_label": "Фактор скорости покачивания:",
+    "performance_group": "Производительность",
     "whisper_engine_group": "Движок Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартный (Python)",
