--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -7,6 +7,7 @@
     "languages_tab": "Languages",
     "prompts_tab": "Prompts",
     "montage_tab": "Montage",
+    "max_concurrent_montages_label": "Max concurrent montages:",
     "subtitles_tab": "Subtitles",
     "templates_tab": "Templates",
     "openrouter_tab": "OpenRouter",
@@ -151,6 +152,7 @@
     "sway_effects": "Sway Effects",
     "enable_sway_label": "Enable Sway",
     "sway_speed_factor_label": "Sway Speed Factor:",
+    "performance_group": "Performance",
     "whisper_engine_group": "Whisper Engine",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Standard (Python)",
