--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -7,6 +7,7 @@
     "languages_tab": "Мови",
     "prompts_tab": "Промти",
     "montage_tab": "Монтаж",
+    "max_concurrent_montages_label": "Максимум одночасних монтажів:",
     "subtitles_tab": "Субтитри",
     "templates_tab": "Шаблони",
     "openrouter_tab": "OpenRouter",
@@ -151,6 +152,7 @@
     "sway_effects": "Ефекти похитування",
     "enable_sway_label": "Увімкнути похитування",
     "sway_speed_factor_label": "Фактор швидкості похитування:",
+    "performance_group": "Продуктивність",
     "whisper_engine_group": "Рушій Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартний (Python)",
