--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -120,6 +120,7 @@
     "gallery_tab_title": "Галерея",
     "gallery_total_images_label": "Всего изображений: {count}",
     "gallery_task_group_title": "{title} ({count} изображений)",
+    "gallery_language_group_title": "{title} ({count} изображений)",
     "confirm_image_deletion_message": "Вы уверены, что хотите навсегда удалить это изображение с диска?\n\n{}",
     "regenerate_image_title": "Перегенерировать изображение",
     "thumbnail_regen_button": "Перегенерировать",
