--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -67,6 +67,7 @@
     "results_path_label": "Путь для сохранения результатов:",
     "browse_button": "Обзор...",
     "select_directory": "Выберите папку",
+    "image_review_label": "Контроль изображений:",
     "queue_tab": "Очередь",
     "add_to_queue": "Добавить в очередь",
     "enter_task_name_title": "Введите название задачи",
@@ -170,5 +171,8 @@
     "max_words_per_line_label": "Макс. слов в строке:",
     "clear_queue": "Очистить очередь",
     "confirm_clear_queue_title": "Подтверждение очистки очереди",
-    "confirm_clear_queue_message": "Вы уверены, что хотите очистить всю очередь? Это также очистит галерею."
+    "confirm_clear_queue_message": "Вы уверены, что хотите очистить всю очередь? Это также очистит галерею.",
+    "image_review_title": "Требуется просмотр изображений",
+    "image_review_message": "Пожалуйста, просмотрите сгенерированные изображения во вкладке 'Галерея'. Вы можете перегенерировать любые изображения, которые вам не нравятся. Когда будете готовы, нажмите кнопку 'Продолжить монтаж' внизу галереи.",
+    "continue_montage_button": "Продолжить монтаж"
 }
