--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -67,6 +67,7 @@
     "results_path_label": "Шлях для збереження результатів:",
     "browse_button": "Огляд...",
     "select_directory": "Виберіть папку",
+    "image_review_label": "Контроль зображень:",
     "queue_tab": "Черга",
     "add_to_queue": "Додати до черги",
     "enter_task_name_title": "Введіть назву завдання",
@@ -170,5 +171,8 @@
     "max_words_per_line_label": "Макс. слів у рядку:",
     "clear_queue": "Очистити чергу",
     "confirm_clear_queue_title": "Підтвердження очищення черги",
-    "confirm_clear_queue_message": "Ви впевнені, що хочете очистити всю чергу? Це також очистить галерею."
+    "confirm_clear_queue_message": "Ви впевнені, що хочете очистити всю чергу? Це також очистить галерею.",
+    "image_review_title": "Потрібен перегляд зображень",
+    "image_review_message": "Будь ласка, перегляньте згенеровані зображення у вкладці 'Галерея'. Ви можете перегенерувати будь-які зображення, які вам не подобаються. Коли будете готові, натисніть кнопку 'Продовжити монтаж' внизу галереї.",
+    "continue_montage_button": "Продовжити монтаж"
 }
