--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -154,6 +154,10 @@
     "sway_effects": "Sway Effects",
     "enable_sway_label": "Enable Sway",
     "sway_speed_factor_label": "Sway Speed Factor:",
+    "special_processing_group": "Special processing at the beginning",
+    "enable_special_processing_label": "Enable special processing",
+    "image_count_label": "Number of images:",
+    "duration_per_image_label": "Time per image:",
     "performance_group": "Performance",
     "whisper_engine_group": "Whisper Engine",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
