--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -154,6 +154,10 @@
     "sway_effects": "Ефекти похитування",
     "enable_sway_label": "Увімкнути похитування",
     "sway_speed_factor_label": "Фактор швидкості похитування:",
+    "special_processing_group": "Спецобробка на початку",
+    "enable_special_processing_label": "Увімкнути спецобробку",
+    "image_count_label": "Кількість зображень:",
+    "duration_per_image_label": "Час на картинку:",
     "performance_group": "Продуктивність",
     "whisper_engine_group": "Рушій Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
