--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -154,6 +154,10 @@
     "sway_effects": "Эффекты покачивания",
     "enable_sway_label": "Включить покачивание",
     "sway_speed_factor_label": "Фактор скорости покачивания:",
+    "special_processing_group": "Спецобработка в начале",
+    "enable_special_processing_label": "Включить спецобработку",
+    "image_count_label": "Количество изображений:",
+    "duration_per_image_label": "Время на картинку:",
     "performance_group": "Производительность",
     "whisper_engine_group": "Движок Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
