--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -113,6 +113,9 @@
     "googler_check_usage_button": "Check",
     "googler_aspect_ratio_label": "Aspect Ratio:",
     "googler_max_threads_label": "Max Threads:",
+    "googler_max_video_threads_label": "Max video threads:",
+    "googler_video_prompt_label": "Prompt for animation:",
+    "googler_video_prompt_placeholder": "Enter prompt for animation",
     "googler_seed_label": "Seed:",
     "googler_negative_prompt_label": "Negative Prompt:",
     "googler_negative_prompt_placeholder": "Enter negative prompt",
@@ -155,7 +158,11 @@
     "enable_sway_label": "Enable Sway",
     "sway_speed_factor_label": "Sway Speed Factor:",
     "special_processing_group": "Special processing at the beginning",
-    "enable_special_processing_label": "Enable special processing",
+    "special_proc_mode_label": "Mode:",
+    "special_proc_mode_disabled": "Disabled",
+    "special_proc_mode_quick_show": "Quick show",
+    "special_proc_mode_video_at_beginning": "Video at the beginning",
+    "special_proc_video_count_label": "Number of videos:",
     "image_count_label": "Number of images:",
     "duration_per_image_label": "Time per image:",
     "performance_group": "Performance",
