--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -113,6 +113,9 @@
     "googler_check_usage_button": "Проверить",
     "googler_aspect_ratio_label": "Соотношение сторон:",
     "googler_max_threads_label": "Макс. потоков:",
+    "googler_max_video_threads_label": "Макс. потоков для видео:",
+    "googler_video_prompt_label": "Промт для анимации:",
+    "googler_video_prompt_placeholder": "Введите промт для анимации",
     "googler_seed_label": "Seed:",
     "googler_negative_prompt_label": "Негативный промт:",
     "googler_negative_prompt_placeholder": "Введите негативный промт",
@@ -155,7 +158,11 @@
     "enable_sway_label": "Включить покачивание",
     "sway_speed_factor_label": "Фактор скорости покачивания:",
     "special_processing_group": "Спецобработка в начале",
-    "enable_special_processing_label": "Включить спецобработку",
+    "special_proc_mode_label": "Режим:",
+    "special_proc_mode_disabled": "Отключено",
+    "special_proc_mode_quick_show": "Быстрый показ",
+    "special_proc_mode_video_at_beginning": "Видео в начале",
+    "special_proc_video_count_label": "Количество видео:",
     "image_count_label": "Количество изображений:",
     "duration_per_image_label": "Время на картинку:",
     "performance_group": "Производительность",
