--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -113,6 +113,9 @@
     "googler_check_usage_button": "Перевірити",
     "googler_aspect_ratio_label": "Співвідношення сторін:",
     "googler_max_threads_label": "Макс. потоків:",
+    "googler_max_video_threads_label": "Макс. потоків для відео:",
+    "googler_video_prompt_label": "Промт для анімації:",
+    "googler_video_prompt_placeholder": "Введіть промт для анімації",
     "googler_seed_label": "Seed:",
     "googler_negative_prompt_label": "Негативний промпт:",
     "googler_negative_prompt_placeholder": "Введіть негативний промпт",
@@ -155,7 +158,11 @@
     "enable_sway_label": "Увімкнути похитування",
     "sway_speed_factor_label": "Фактор швидкості похитування:",
     "special_processing_group": "Спецобробка на початку",
-    "enable_special_processing_label": "Увімкнути спецобробку",
+    "special_proc_mode_label": "Режим:",
+    "special_proc_mode_disabled": "Вимкнено",
+    "special_proc_mode_quick_show": "Швидкий показ",
+    "special_proc_mode_video_at_beginning": "Відео на початку",
+    "special_proc_video_count_label": "Кількість відео:",
     "image_count_label": "Кількість зображень:",
     "duration_per_image_label": "Час на картинку:",
     "performance_group": "Продуктивність",
