--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -139,6 +139,7 @@
     "gemini_tts_url": "URL GeminiTTS:",
     "gemini_tts_api_key": "API Ключ GeminiTTS:",
     "tts_provider_label": "Сервис озвучки:",
+    "voice": "Голос:",
     "voicemaker_voice_label": "Голос VoiceMaker:",
     "gemini_voice_label": "Голос Gemini:",
     "gemini_tone_label": "Тон Gemini:",
