--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -186,5 +186,26 @@
     "confirm_clear_queue_message": "Are you sure you want to clear the entire queue? This will also clear the gallery.",
     "image_review_title": "Image Review Required",
     "image_review_message": "Please review the generated images in the Gallery tab. You can regenerate any images you don't like. When you are ready, press the 'Continue Montage' button at the bottom of the gallery.",
-    "continue_montage_button": "Continue Montage"
+    "continue_montage_button": "Continue Montage",
+    "template_label": "Template:",
+    "template_name_label": "Template Name:",
+    "new_button": "New",
+    "save_button": "Save",
+    "save_as_button": "Save As...",
+    "apply_button": "Apply",
+    "delete_button": "Delete",
+    "rename_button": "Rename",
+    "error": "Error",
+    "success": "Success",
+    "template_name_empty_error": "Template name cannot be empty.",
+    "template_saved_success": "Template '{name}' saved successfully.",
+    "save_as_title": "Save As",
+    "enter_new_template_name": "Enter a new name for the template:",
+    "no_template_selected_error": "No template selected.",
+    "template_load_error": "Failed to load template '{name}'.",
+    "template_applied_success": "Template '{name}' applied successfully. Settings have been updated.",
+    "confirm_delete_title": "Confirm Deletion",
+    "confirm_delete_template_text": "Are you sure you want to delete the template '{name}'?",
+    "rename_template_title": "Rename Template",
+    "enter_new_name_for_template": "Enter a new name for the template '{name}':"
 }
