--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -186,5 +186,26 @@
     "confirm_clear_queue_message": "Вы уверены, что хотите очистить всю очередь? Это также очистит галерею.",
     "image_review_title": "Требуется просмотр изображений",
     "image_review_message": "Пожалуйста, просмотрите сгенерированные изображения во вкладке 'Галерея'. Вы можете перегенерировать любые изображения, которые вам не нравятся. Когда будете готовы, нажмите кнопку 'Продолжить монтаж' внизу галереи.",
-    "continue_montage_button": "Продолжить монтаж"
+    "continue_montage_button": "Продолжить монтаж",
+    "template_label": "Шаблон:",
+    "template_name_label": "Имя шаблона:",
+    "new_button": "Создать",
+    "save_button": "Сохранить",
+    "save_as_button": "Сохранить как...",
+    "apply_button": "Применить",
+    "delete_button": "Удалить",
+    "rename_button": "Переименовать",
+    "error": "Ошибка",
+    "success": "Успех",
+    "template_name_empty_error": "Имя шаблона не может быть пустым.",
+    "template_saved_success": "Шаблон '{name}' успешно сохранен.",
+    "save_as_title": "Сохранить как",
+    "enter_new_template_name": "Введите новое имя для шаблона:",
+    "no_template_selected_error": "Шаблон не выбран.",
+    "template_load_error": "Не удалось загрузить шаблон '{name}'.",
+    "template_applied_success": "Шаблон '{name}' успешно применен. Настройки обновлены.",
+    "confirm_delete_title": "Подтвердить удаление",
+    "confirm_delete_template_text": "Вы уверены, что хотите удалить шаблон '{name}'?",
+    "rename_template_title": "Переименовать шаблон",
+    "enter_new_name_for_template": "Введите новое имя для шаблона '{name}':"
 }
