--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -186,5 +186,26 @@
     "confirm_clear_queue_message": "Ви впевнені, що хочете очистити всю чергу? Це також очистить галерею.",
     "image_review_title": "Потрібен перегляд зображень",
     "image_review_message": "Будь ласка, перегляньте згенеровані зображення у вкладці 'Галерея'. Ви можете перегенерувати будь-які зображення, які вам не подобаються. Коли будете готові, натисніть кнопку 'Продовжити монтаж' внизу галереї.",
-    "continue_montage_button": "Продовжити монтаж"
+    "continue_montage_button": "Продовжити монтаж",
+    "template_label": "Шаблон:",
+    "template_name_label": "Ім'я шаблону:",
+    "new_button": "Створити",
+    "save_button": "Зберегти",
+    "save_as_button": "Зберегти як...",
+    "apply_button": "Застосувати",
+    "delete_button": "Видалити",
+    "rename_button": "Перейменувати",
+    "error": "Помилка",
+    "success": "Успіх",
+    "template_name_empty_error": "Ім'я шаблону не може бути порожнім.",
+    "template_saved_success": "Шаблон '{name}' успішно збережено.",
+    "save_as_title": "Зберегти як",
+    "enter_new_template_name": "Введіть нове ім'я для шаблону:",
+    "no_template_selected_error": "Шаблон не вибрано.",
+    "template_load_error": "Не вдалося завантажити шаблон '{name}'.",
+    "template_applied_success": "Шаблон '{name}' успішно застосовано. Налаштування оновлено.",
+    "confirm_delete_title": "Підтвердити видалення",
+    "confirm_delete_template_text": "Ви впевнені, що хочете видалити шаблон '{name}'?",
+    "rename_template_title": "Перейменувати шаблон",
+    "enter_new_name_for_template": "Введіть нове ім'я для шаблону '{name}':"
 }
