--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -212,5 +212,9 @@
     "found_existing_files_title": "Found existing files",
     "use_existing_files_question": "Do you want to use these files and skip the corresponding stages?",
     "images_label": "img",
-    "videos_label": "vid"
+    "videos_label": "vid",
+    "add_images_title": "Add Images",
+    "add_images_desc": "Drag and drop image files (.png, .jpg, .jpeg) here. The images will be sorted by filename.",
+    "add_audio_title": "Add Audio",
+    "add_audio_desc": "Drag and drop an audio file (.mp3, .wav) here."
 }
