--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,7 +5,7 @@
     "general_tab": "General",
     "api_tab": "API",
     "languages_tab": "Languages",
-    "prompts_tab": "Prompts",
+    "prompts_tab": "Prompts and Stages",
     "montage_tab": "Montage",
     "max_concurrent_montages_label": "Max concurrent montages:",
     "subtitles_tab": "Subtitles",
