--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -5,7 +5,7 @@
     "general_tab": "Общие",
     "api_tab": "API",
     "languages_tab": "Языки",
-    "prompts_tab": "Промты",
+    "prompts_tab": "Промты и Этапы",
     "montage_tab": "Монтаж",
     "max_concurrent_montages_label": "Максимум одновременных монтажей:",
     "subtitles_tab": "Субтитры",
