--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -5,7 +5,7 @@
     "general_tab": "Загальні",
     "api_tab": "API",
     "languages_tab": "Мови",
-    "prompts_tab": "Промти",
+    "prompts_tab": "Промти та Етапи",
     "montage_tab": "Монтаж",
     "max_concurrent_montages_label": "Максимум одночасних монтажів:",
     "subtitles_tab": "Субтитри",
