--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -57,7 +57,7 @@
     "language_prompt_label": "Промт для цієї мови:",
     "translation_model_label": "Модель для перекладу:",
     "stage_translation": "Переклад",
-    "stage_img_prompts": "Промти для картинок",
+    "stage_img_prompts": "Промти",
     "stage_images": "Картинки",
     "stage_voiceover": "Озвучка",
     "stage_subtitles": "Субтитри",
@@ -93,7 +93,7 @@
     "confirm_stage_deletion_message": "Ви впевнені, що бажаєте видалити етап \"{}\" для мови \"{}\" з завдання \"{}\"",
     "prompt_content_label": "Промт для генерації зображень:",
     "image_model_label": "Модель для зображень:",
-    "original_text": "Оригінальний текст",
+    "original_text": "Оригінал",
     "all_levels": "Всі рівні",
     "search_logs": "Пошук по логах...",
     "autoscroll": "Автопрокрутка",
@@ -228,5 +228,7 @@
     "confirm_save_title": "Підтвердити збереження",
     "confirm_save_template_text": "Ви впевнені, що хочете зберегти зміни в шаблон '{name}'?",
     "confirm_apply_title": "Підтвердити застосування",
-    "confirm_apply_template_text": "Ви впевнені, що хочете застосувати шаблон '{name}'? Це перезапише ваші поточні налаштування."
+    "confirm_apply_template_text": "Ви впевнені, що хочете застосувати шаблон '{name}'? Це перезапише ваші поточні налаштування.",
+    "prompts_count": "промптів",
+    "characters_count": "символів"
 }
