--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -164,6 +164,7 @@
     "special_proc_mode_quick_show": "Швидкий показ",
     "special_proc_mode_video_at_beginning": "Відео на початку",
     "special_proc_video_count_label": "Кількість відео:",
+    "special_proc_check_sequence_label": "Перевіряти послідовність зображень:",
     "image_count_label": "Кількість зображень:",
     "duration_per_image_label": "Час на картинку:",
     "performance_group": "Продуктивність",
